# ccny_rgbd_tools

ccny_g2o/: Makefile
ccny_rgbd/: CMakeLists.txt  manifest.xml
ccny_rgbd/cfg/: FastDetector.cfg
ccny_rgbd/include/ccny_rgbd/: types.h
ccny_rgbd/include/ccny_rgbd/apps/: image_downsampler.h  keyframe_multi_mapper.h  keyframe_online_mapper.h  keyframe_sender.h  visual_odometry.h
ccny_rgbd/include/ccny_rgbd/nodelet/: keyframe_sender_nodelet.h  rgbd_image_proc_nodelet.h  visual_odometry_nodelet.h
ccny_rgbd/nodelets/: rgbd_image_proc_nodelet.xml
ccny_rgbd/src/apps/: image_downsampler.cpp  keyframe_mapper.cpp  keyframe_multi_mapper.cpp  keyframe_online_mapper.cpp  keyframe_sender.cpp  visual_odometry.cpp
ccny_rgbd/src/node/: image_downsampler_node.cpp  keyframe_multi_mapper_node.cpp  keyframe_online_mapper_node.cpp  keyframe_sender_node.cpp
ccny_rgbd/src/nodelet/: keyframe_sender_nodelet.cpp  rgbd_image_proc_nodelet.cpp  visual_odometry_nodelet.cpp
lib_rgbdtools/: Makefile
